# symbolica

./: .envrc  .gitignore  .gitmodules  Cargo.toml  Contributing.md  License.md  Readme.md  build.rs  flake.nix  pyproject.toml  symbolica.pyi
.github/workflows/: coverage.yml  publish_pypi.yml
examples/: builder.rs  coefficient_ring.rs  collect.rs  derivative.rs  dual.rs  evaluate.rs  expansion.rs  factorization.rs  fibonacci.rs  fuel_backend.rs  groebner_basis.rs  integration.rs  nested_evaluation.rs  numerical_integration.rs  optimize.rs  optimize_multiple.rs  partial_fraction.rs  partition.rs  pattern_match.rs  pattern_restrictions.rs  polynomial.rs  polynomial_gcd.rs  rational_polynomial.rs  rational_reconstruction.rs  replace_all.rs  replace_once.rs  series.rs  solve_linear_system.rs  streaming.rs  taylor_series.rs  to_poly.rs  tree_replace.rs  tree_walk.rs
lib/graphica/: Contributing.md
lib/graphica/.github/workflows/: coverage.yml
lib/graphica/src/: lib.rs
lib/numerica/: Cargo.toml  Readme.md
lib/numerica/.github/workflows/: coverage.yml
lib/numerica/src/: combinatorics.rs  numerical_integration.rs  tensors.rs
lib/numerica/src/domains/: float.rs  integer.rs
lib/numerica/src/tensors/: matrix.rs
libs/graphica/: Cargo.toml  Readme.md
libs/graphica/src/: lib.rs
libs/numerica/: Cargo.toml  Readme.md
libs/numerica/examples/: dual.rs
libs/numerica/src/: combinatorics.rs  domains.rs  graph.rs  lib.rs  numerical_integration.rs  printer.rs
libs/numerica/src/domains/: dual.rs  finite_field.rs  float.rs  integer.rs  rational.rs
libs/numerica/src/tensors/: matrix.rs
src/: api.rs  atom.rs  coefficient.rs  collect.rs  combinatorics.rs  derivative.rs  domains.rs  evaluate.rs  expand.rs  finite_field.rs  graph.rs  id.rs  lib.rs  main.rs  normalize.rs  numerical_integration.rs  parser.rs  poly.rs  printer.rs  representations.rs  rings.rs  solve.rs  state.rs  streaming.rs  tensors.rs  transformer.rs  utils.rs
src/api/: cpp.rs  mathematica.rs  python.rs
src/atom/: coefficient.rs  core.rs  ops.rs  representation.rs
src/domains/: algebraic_number.rs  atom.rs  dual.rs  factorized_rational_polynomial.rs  finite_field.rs  float.rs  integer.rs  linear_system.rs  rational.rs  rational_polynomial.rs
src/poly/: evaluate.rs  factor.rs  gcd.rs  groebner.rs  monomial.rs  polynomial.rs  resultant.rs  series.rs  univariate.rs
src/representations/: coefficient.rs  default.rs  number.rs  tree.rs
src/rings/: factorized_rational_polynomial.rs  finite_field.rs  float.rs  integer.rs  integer_mod.rs  linear_system.rs  rational.rs  rational_polynomial.rs
src/tensors/: matrix.rs
symbolica/: Cargo.toml
symbolica/examples/: builder.rs  collect.rs  derivative.rs  numerical_integration.rs  pattern_restrictions.rs  polynomial.rs  rational_reconstruction.rs
symbolica/src/: atom.rs  coefficient.rs  domains.rs  evaluate.rs  lib.rs  normalize.rs  numerical_integration.rs  parser.rs  poly.rs  printer.rs  state.rs  tensors.rs  transformer.rs  utils.rs
symbolica/src/api/: cpp.rs
symbolica/src/atom/: core.rs
symbolica/src/domains/: algebraic_number.rs  atom.rs
symbolica/src/poly/: polynomial.rs  resultant.rs  series.rs
symbolica/tests/: evaluation.rs
symbolica_community/: Cargo.toml
symbolica_community/examples/: dual.rs  integration.rs
symbolica_community/src/: combinatorics.rs  domains.rs  graph.rs  lib.rs  numerical_integration.rs  printer.rs
symbolica_community/src/domains/: dual.rs  finite_field.rs  integer.rs  rational.rs
symbolica_community/src/tensors/: matrix.rs
tests/: evaluation.rs  import_export.rs  pattern_matching.rs  rational_polynomial.rs
