[package]
authors = ["Ben Ruijl <ben@symbolica.io>"]
build = "build.rs"
categories = ["science"]
description = "A blazing fast computer algebra system"
edition = "2024"
keywords = ["algebra", "symbolic", "manipulation", "mathematics", "physics"]
license-file = "License.md"
name = "symbolica"
readme = "Readme.md"
repository = "https://github.com/benruijl/symbolica"
rust-version = "1.85"
version = "0.18.0"

[profile.release]
codegen-units = 1
lto = true

[profile.dev-optim]
inherits = "dev"
opt-level = 3

[lib]
crate-type = ["lib"]
name = "symbolica"

[features]
default = ["tracing_only_warnings"]
# if using this, make sure jemalloc is compiled with --disable-initial-exec-tls
# if symbolica is used as a dynamic library (as is the case for the Python API)
faster_alloc = ["tikv-jemallocator"]
# sort functions based on an argument-by-argument comparison
full_fn_cmp = []
mathematica_api = ["wolfram-library-link"]
# create a Python module
python_api = ["pyo3/extension-module", "bincode", "pyo3-stub-gen"]
# export the Python API
python_export = ["pyo3", "bincode", "pyo3-stub-gen"]
# generate stubs for Python API
python_stubgen = ["python_export"]
# build a module that is independent of the specific Python version
python_abi3 = ["pyo3/abi3", "pyo3/abi3-py37"]
tracing_only_warnings = ["tracing/release_max_level_warn"]
# import/export objects that do not depend on the state using serde
serde = ["dep:serde", "rug/serde"]
# allow importing/exporting of atoms with a state map using bincode
bincode = ["dep:bincode", "dep:bincode-trait-derive"]
experimental_poly_gcd = []

[dependencies.pyo3]
features = ["abi3", "py-clone"]
optional = true
version = "0.25"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies]
ahash = "0.8.7"
append-only-vec = "0.1"
bincode = { version = "2.0", optional = true }
brotli = "8.0"
byteorder = "1.5"
bytes = "1.5"
colored = "3.0"
dyn-clone = "1.0"
libloading = "0.8.4"
once_cell = "1.19"
rand = "0.9"
rand_xoshiro = "0.7"
pyo3-stub-gen = { git = "https://github.com/benruijl/pyo3-stub-gen", branch = "patched", default-features = false, optional = true }
rayon = "1.8"
rug = "1.27.0"
self_cell = "1.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "1.13"
smartstring = "1.0"
tikv-jemallocator = { version = "0.6", optional = true }
tinyjson = "2.5"
tracing = "0.1"
wide = "0.7"
wolfram-library-link = { version = "0.2.9", optional = true }
bincode-trait-derive = { version = "0.1.0", optional = true }
