[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
authors = [{ email = "ben@symbolica.io" }, { name = "Ben Ruijl" }]
description = "Symbolica is a blazing fast computer algebra system"
keywords = ["math", "algebra", "polynomial", "expression", "manipulation"]
license = { file = "License.md" }
name = "symbolica"
readme = "Readme.md"
version = "1.0.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
homepage = "https://symbolica.io"
repository = "https://github.com/symbolica-dev/symbolica"

[tool.maturin]
features = ["python_api", "python_abi3", "tracing/release_max_level_info"]
